<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_gap">

    <TextView
        android:id="@+id/lbl_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_files"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_arquivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:gravity="center"
        android:textColor="@color/txt_red"
        app:layout_constraintLeft_toRightOf="@+id/lbl_files"
        app:layout_constraintTop_toTopOf="@+id/lbl_files"/>

    <TextView
        android:id="@+id/txt_tamanho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:gravity="center"
        android:textColor="@color/txt_gren"
        app:layout_constraintLeft_toRightOf="@+id/txt_arquivo"
        app:layout_constraintTop_toTopOf="@+id/lbl_files"/>

    <TextView
        android:id="@+id/lbl_duplicatas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_gap"
        android:text="@string/lbl_duplicades"
        app:layout_constraintLeft_toLeftOf="@+id/lbl_files"
        app:layout_constraintTop_toBottomOf="@+id/lbl_files"/>

    <TextView
        android:id="@+id/txt_duplicatas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:gravity="center"
        android:textColor="@color/txt_red"
        app:layout_constraintLeft_toRightOf="@+id/lbl_duplicatas"
        app:layout_constraintTop_toTopOf="@+id/lbl_duplicatas"/>

    <TextView
        android:id="@+id/txt_duplicatas_tamanho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_gap"
        android:gravity="center"
        android:textColor="@color/txt_gren"
        app:layout_constraintLeft_toRightOf="@+id/txt_duplicatas"
        app:layout_constraintTop_toTopOf="@+id/lbl_duplicatas"/>


    <TextView
        android:id="@+id/lbl_duracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center"
        android:layout_marginEnd="@dimen/default_gap"
        android:text="@string/lbl_duration"
        app:layout_constraintRight_toLeftOf="@+id/txt_duracao"
        app:layout_constraintTop_toTopOf="@+id/txt_duracao"/>

    <TextView
        android:id="@+id/txt_duracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_gap"
        android:gravity="center"
        android:textColor="@color/txt_cyan"
        app:layout_constraintRight_toRightOf="@+id/cmb_estensoes"
        app:layout_constraintTop_toBottomOf="@+id/cmb_estensoes"
        />

    <TextView
        android:id="@+id/txt_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/default_gap"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_excluir"
        app:layout_constraintLeft_toLeftOf="@+id/btn_excluir"
        app:layout_constraintRight_toRightOf="@+id/btn_excluir"
        app:layout_constraintTop_toTopOf="@+id/btn_excluir"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_excluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginLeft="@dimen/default_gap"
        android:layout_marginRight="@dimen/default_gap"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginTop="@dimen/default_gap"
        android:clickable="true"
        android:tint="@color/white"
        app:backgroundTint="@color/colorPrimaryDark"        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete_forever"/>

    <Spinner
        android:id="@+id/cmb_estensoes"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginTop="@dimen/default_gap"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_gap"
        android:text="@string/lbl_extensions"
        app:layout_constraintRight_toLeftOf="@+id/cmb_estensoes"
        app:layout_constraintTop_toTopOf="@+id/cmb_estensoes"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_gap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_excluir">

        <LinearLayout
            android:id="@+id/box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"/>

    </ScrollView>

</android.support.constraint.ConstraintLayout>